apps/security/authelia/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia-route
  namespace: authelia
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - auth.njyzy.space
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authelia
          port: 80
